# distributed-todo

./: .editorconfig  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  todo_server_config.ini
.github/workflows/: pytest.yml
common/: app.db  config.py  db.py  task.py
docs/: initial-design.md  project-proposal.md
tests/: README.md  test_config.py  test_db.py
todo-client/: display.py  pyproject.toml  todo.py
todo-client/src/todo_client/: display.py  main.py
todo-server/: pyproject.toml
todo-server/src/todo_server/: main.py
