[project]
name = "distributed-todo"
version = "0.1.0"
description = "A client and server for keeping track of tasks"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]

[tool.uv.sources]
todo-common = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "todo-client", "todo-server"]

